# python-stringcase2

./: .gitignore  pyproject.toml  tox.ini
src/: stringcase.py
tests/: test_stringcase.py
